zerocopy-derive/tests/ui-nightly/mid_compile_pass.stderr
error[E0277]: the trait bound `T: KnownLayout` is not satisfied
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:60:26
   |
60 | fn test_kl13<T>(t: T) -> impl KnownLayout {
   |                          ^^^^^^^^^^^^^^^^ the trait `KnownLayout` is not implemented for `T`
61 |     KL13(0u8, t)
   |     ------------ return type was inferred to be `KL13<T>` here
   |
   = note: Consider adding `#[derive(KnownLayout)]` to `T`
note: required for `KL13<T>` to implement `KnownLayout`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:56:10
   |
56 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `KnownLayout`
   |
60 | fn test_kl13<T: zerocopy::KnownLayout>(t: T) -> impl KnownLayout {
   |               +++++++++++++++++++++++

error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:32:15
   |
31 | fn test_kl04<T: ?Sized>(kl: &KL04<T>) {
   |              - this type parameter needs to be `Sized`
32 |     assert_kl(kl);
   |     --------- ^^ doesn't have a size known at compile-time
   |     |
   |     required by a bound introduced by this call
   |
note: required because it appears within the type `KL04<T>`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:29:8
   |
29 | struct KL04<T: ?Sized>(u8, T);
   |        ^^^^
note: required for `KL04<T>` to implement `KnownLayout`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:28:10
   |
28 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `assert_kl`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:24:26
   |
24 | fn assert_kl<T: ?Sized + KnownLayout>(_: &T) {}
   |                          ^^^^^^^^^^^ required by this bound in `assert_kl`
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider removing the `?Sized` bound to make the type parameter `Sized`
   |
31 - fn test_kl04<T: ?Sized>(kl: &KL04<T>) {
31 + fn test_kl04<T>(kl: &KL04<T>) {
   |

error[E0277]: the size for values of type `T` cannot be known at compilation time
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:41:15
   |
40 | fn test_kl06<T: ?Sized + KnownLayout>(kl: &KL06<T>) {
   |              - this type parameter needs to be `Sized`
41 |     assert_kl(kl);
   |     --------- ^^ doesn't have a size known at compile-time
   |     |
   |     required by a bound introduced by this call
   |
note: required because it appears within the type `KL06<T>`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:38:8
   |
38 | struct KL06<T: ?Sized + KnownLayout>(u8, T);
   |        ^^^^
note: required for `KL06<T>` to implement `KnownLayout`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:37:10
   |
37 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `assert_kl`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:24:26
   |
24 | fn assert_kl<T: ?Sized + KnownLayout>(_: &T) {}
   |                          ^^^^^^^^^^^ required by this bound in `assert_kl`
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider removing the `?Sized` bound to make the type parameter `Sized`
   |
40 - fn test_kl06<T: ?Sized + KnownLayout>(kl: &KL06<T>) {
40 + fn test_kl06<T: KnownLayout>(kl: &KL06<T>) {
   |

error[E0277]: the trait bound `KL12<T>: KnownLayout` is not satisfied
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:51:15
   |
51 |     assert_kl(kl)
   |     --------- ^^ the trait `KnownLayout` is not implemented for `KL12<T>`
   |     |
   |     required by a bound introduced by this call
   |
note: required for `KL12<T>` to implement `KnownLayout`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:46:10
   |
46 | #[derive(KnownLayout)]
   |          ^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: required by a bound in `assert_kl`
  --> /zerocopy-derive/tests/ui-nightly/mid_compile_pass.rs:24:26
   |
24 | fn assert_kl<T: ?Sized + KnownLayout>(_: &T) {}
   |                          ^^^^^^^^^^^ required by this bound in `assert_kl`
   = note: this error originates in the derive macro `KnownLayout` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider borrowing here
   |
51 |     assert_kl(&kl)
   |               +
51 |     assert_kl(&mut kl)
   |               ++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
